# lesson-11/src/controllers/PostController.ts
@@ -1,10 +1,10 @@
-import {Route, Get, Post, Put, Delete, Query, Path, Body } from "tsoa";
+import {Route, Get, Post, Put, Delete, Query, Path, Body, SuccessResponse } from "tsoa";
 import * as postService from "../services/posts";
 import { queryPostsSchema, PostFilters, CreatePostDto, UpdatePostDto } from "../schemas/posts";
 import { ApiError } from "../types/errors";
 import {  PostResponseDto, mapPostModelToDto } from "../dtos/postResponse.dto";
 import { Tags } from "tsoa";
-import { createPositiveNumericIdSchema } from "../helpers/helpers";
+import { z } from "zod";
 
 @Tags("Posts")
 @Route("posts")
@@ -15,7 +15,12 @@ export class PostController {
     @Query() content?: string,
     @Query() userId?: string
   ): Promise<PostResponseDto[]> {
-    const query = queryPostsSchema.parse({ title, content, userId });
+    let query;
+    try {
+      query = queryPostsSchema.parse({ title, content, userId });
+    } catch (error) {
+      throw new ApiError("Invalid query parameters", 400);
+    }
     const filters: PostFilters = {
       title: query.title,
       content: query.content,
@@ -37,11 +42,12 @@ export class PostController {
   }
 
   @Post()
+@SuccessResponse("201", "Created")
   public async createPost(
     @Body() data: CreatePostDto
   ): Promise<PostResponseDto> {
     try {
-    createPositiveNumericIdSchema("userId").parse(data.userId);
+      z.number().int().positive().parse(data.userId);
     } catch (err) {
       throw new ApiError("Invalid userId. Must be positive integer.", 400);
     }
@@ -57,10 +63,12 @@ export class PostController {
     @Path() id: number,
     @Body() data: UpdatePostDto
   ): Promise<PostResponseDto> {
-    try {
-    createPositiveNumericIdSchema("userId").parse(data.userId);
-    } catch (err) {
-      throw new ApiError("Invalid userId. Must be positive integer.", 400);
+    if (data.userId !== undefined) {
+      try {
+        z.number().int().positive().parse(data.userId);
+      } catch (err) {
+        throw new ApiError("Invalid userId. Must be positive integer.", 400);
+      }
     }
     const updated = await postService.updatePost(id, data);
     if (!updated) {
@@ -73,11 +81,6 @@ export class PostController {
   public async deletePost(
     @Path() id: number
   ): Promise<void> {
-    try {
-    createPositiveNumericIdSchema("userId").parse(id);
-    } catch (err) {
-      throw new ApiError("Invalid userId. Must be positive integer.", 400);
-    }
     const deleted = await postService.deletePost(id);
     if (!deleted) {
       throw new ApiError("Post not found", 404);
